--- a/build.gradle
+++ b/build.gradle
@@ -61,9 +61,7 @@ java {
 }
 
 jar {
-	from("LICENSE") {
-		rename { "${it}_${project.base.archivesName.get()}"}
-	}
+	from("LICENSE")
 }
 
 // configure the maven publication
