--- a/build.gradle
+++ b/build.gradle
@@ -33,8 +33,6 @@ dependencies {
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
-
-	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 }
 
@@ -61,6 +59,10 @@ java {
 }
 
 jar {
+	from("LICENSE")
+}
+
+sourcesJar {
 	from("LICENSE")
 }
 
