--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.parallel=true
 # Fabric Properties
 # check these on https://fabricmc.net/develop
 minecraft_version=1.20.6
-yarn_mappings=1.20.6+build.1
+yarn_mappings=1.20.6+build.2
 loader_version=0.15.11
 
 # Mod Properties
@@ -13,5 +13,6 @@ mod_version=1.0.1+1.20.6
 maven_group=dev.fixyl.componentviewer
 archives_base_name=componentviewer
 
-# Fabric API
-fabric_version=0.98.0+1.20.6
+# Dependencies
+fabric_version=0.99.0+1.20.6
+modmenu_version=10.0.0-beta.1
