--- a/gradle.properties
+++ b/gradle.properties
@@ -4,15 +4,15 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21
-yarn_mappings=1.21+build.1
+minecraft_version=1.21.1
+yarn_mappings=1.21.1+build.1
 loader_version=0.15.11
 
 # Mod Properties
-mod_version=1.1.2+1.21
+mod_version=1.1.2+1.21.1
 maven_group=dev.fixyl.componentviewer
 archives_base_name=componentviewer
 
 # Dependencies
-fabric_version=0.100.1+1.21
-modmenu_version=11.0.0-beta.1
+fabric_version=0.102.0+1.21.1
+modmenu_version=11.0.1
