--- a/gradle.properties
+++ b/gradle.properties
@@ -4,15 +4,15 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21.2-rc1
-yarn_mappings=1.21.2-rc1+build.1
+minecraft_version=1.21.3
+yarn_mappings=1.21.3+build.2
 loader_version=0.16.7
 
 # Mod Properties
-mod_version=1.1.2+1.21.2
+mod_version=1.1.2+1.21.3
 maven_group=dev.fixyl.componentviewer
 archives_base_name=componentviewer
 
 # Dependencies
-fabric_version=0.106.0+1.21.2
+fabric_version=0.106.1+1.21.3
 modmenu_version=12.0.0-beta.1
