--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,11 @@
-# Done to increase the memory available to gradle.
+# Gradle Properties
 org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
-# Fabric Properties
-# check these on https://fabricmc.net/develop
+# Minecraft and Fabric Environment
 minecraft_version=1.21.4
-yarn_mappings=1.21.4+build.1
-loader_version=0.16.9
+yarn_mappings=1.21.4+build.8
+fabric_loader_version=0.16.10
 
 # Mod Properties
 mod_version=1.1.2+1.21.4
@@ -14,5 +13,5 @@ maven_group=dev.fixyl.componentviewer
 archives_base_name=componentviewer-fabric
 
 # Dependencies
-fabric_version=0.111.0+1.21.4
-modmenu_version=13.0.0-beta.1
+fabric_api_version=0.115.0+1.21.4
+modmenu_version=13.0.1
